improved look on mobile/bug fixes

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,10 +10,11 @@ $main-golden-color: #fec800;
 $s-pink-color: #ea4c89;
 $s-cyan-color: #4be2ff;
 // breakpoints;
-$break-point-xlg: 2000px;
-$break-point-lg: 1250px;
-$break-point-l: 950px;
-$break-point-m: 600px;
+$break-point-xxlg: 2000px;
+$break-point-xlg: 1250px;
+$break-point-l: 980px;
+$break-point-m: 785px;
+$break-point-s: 600px;
 // z-index(s);
 $z-regular: 2;
 $z-important: 3;
